--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,6 +4,7 @@
     margin: 0;
     color: #0a0a0a;
     list-style: none;
+    user-select: none;
 }
 a{
     color: #0a0a0a;
@@ -149,7 +150,7 @@ body.frozen{
     .basketInfoContainer{
         position: absolute;
         // height: 200px;
-        width: 350px;
+        width: 450px;
         // min-width: 200px;
         // max-width: 400px;
         right: 0;
@@ -162,18 +163,37 @@ body.frozen{
         border: 1px solid #aaaaaa;
         transform: translateY(30px);
         opacity: 0;
+        pointer-events: none;
         transition: .4s;
         // transition-delay: 0s, 0s, .4s;
         // transition-property: opacity, transform, box-shadow;
     }
     .basketInfoItem{
+        padding: 0px 5px;
         display: flex;
         align-items: center;
         flex-wrap: nowrap;
         gap: 5px;
-        cursor: default;
+        cursor: pointer;
+        background: white;
+        // transition: .4s;
+        &:hover{
+            // background: rgb(245, 245, 245);
+        }
         &:not(:last-of-type){
             border-bottom: 1px solid #aaaaaa;
+        }
+        .basketInfoItem__remove{
+            margin-left: 5px;
+            flex: 0 0 20px;
+            width: 20px;
+            height: 20px;
+            background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/OOjs_UI_icon_clear-destructive.svg/1200px-OOjs_UI_icon_clear-destructive.svg.png) no-repeat center / cover;
+            border-radius: 50%;
+            transition: .4s;
+            &:hover{
+                box-shadow: 0px 0px 10px red;
+            }
         }
         .basketInfoItem__imageBlock{
             margin: 5px;
@@ -192,8 +212,46 @@ body.frozen{
             text-wrap: nowrap;
             font-size: 15px;
         }
-        .basketInfoItem__count{
-            flex: 0 0 30px;
+        .shopChangeBasketCount{
+            flex: 0 0 35px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 3px;
+            .shopChangeBasketCount__decr,.shopChangeBasketCount__add{
+                width: 22px;
+                height: 22px;
+                font-size: 26px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                line-height: 0;
+                cursor: pointer;
+                // border: 1px solid #878787;
+                // border-radius: 5px;
+                
+            }
+            .shopChangeBasketCount__number{
+                max-width: 30px;
+                text-align: center;
+                padding: 0;
+                margin: 0;
+                outline: none;
+                border: none;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                background: transparent;
+                // border-bottom: 1px solid rgb(130, 130, 130); 
+                &::placeholder{
+                    color: black;
+                }
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    /* display: none; <- Crashes Chrome on hover */
+                    -webkit-appearance: none;
+                    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+                }
+            }
         }
     }
 
@@ -207,6 +265,7 @@ body.frozen{
         .basketInfoContainer{
             opacity: 1;
             transform: translateY(0);
+            pointer-events: all;
         }
     }
 }
@@ -216,5 +275,46 @@ body.frozen{
     .pageTitle{
         font-size: 28px;
         margin: 0;
+    }
+}
+
+.notifications{
+    position: fixed;
+    z-index: 10;
+    right: 15px;
+    top: 70px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    .notifications__item{
+        padding: 8px 20px;
+        padding-left: 15px;
+        font-size: 17px;
+        // text-transform: uppercase;
+        font-weight: 600;
+        background: rgb(76, 180, 76);
+        box-shadow: 0px 0px 10px rgb(76, 180, 76);
+        color: white;
+        border-radius: 5px;
+        opacity: 0;
+        transform: translateX(50px);
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        transition: .4s;
+        &::before{
+            content: '';
+            width: 32px;
+            height: 32px;
+            background: url(https://cdn4.iconfinder.com/data/icons/ballicons-2-new-generation-of-flat-icons/100/tick-1024.png) no-repeat center / contain;
+        }
+        &.notifications__item_shown{
+            opacity: 1;
+            transform: translateX(0px);
+        }
+        &.notifications__item_hidden{
+            opacity: 0;
+            transform: translateX(-50px);
+        }
     }
 }
