--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -24,6 +24,15 @@ body.frozen{
     overflow: hidden;
 }
 
+.page{
+    min-height: 80vh;
+    padding-top: 35px;
+    .pageTitle{
+        font-size: 28px;
+        margin: 0;
+    }
+}
+
 .container{
     max-width: 1120px;
     margin: 0 auto;
@@ -76,11 +85,11 @@ body.frozen{
         margin-left: auto;
     }
 }
-
 .footer{
     background: white;
     padding: 30px 0;
-    border-top: 1px solid black;
+    // border-top: 1px solid black;
+    box-shadow: 1px 0px 3px black;
     .footer__container{
         display: grid;
         grid-template-columns: 70px auto auto 1fr;
@@ -106,11 +115,42 @@ body.frozen{
 .basket{
     padding: 8px 0;
     position: relative;
+    &:hover{
+        .basketWrap{
+            &:not(.empty){
+                background: #24abef;
+                border: 1px solid #249cd7;
+            }
+            &.empty{
+                .basketText{
+                    transform: translateX(0px);
+                }
+            }
+        }
+    }
 
     .basketWrap{
+        text-decoration: none;
+        padding-left: 20px;
         display: flex;
         align-items: stretch;
-
+        border: 1px solid transparent;
+        background: transparent;
+        // border: 1px solid #249cd7;
+        border-radius: 25px;   
+        transition: .4s;
+        &:not(.empty){
+            .basketText{
+                color: white;
+            }
+        }
+        &.empty{
+            .basketText{
+                cursor: default;
+                color: rgb(139, 5, 5);
+                transform: translateX(15px);
+            }
+        }
     }
     .basketText{
         display: flex;
@@ -120,37 +160,28 @@ body.frozen{
         position: relative;
         font-weight: 600;
         z-index: 1;
-        transform: translateX(15px);
         margin-right: 5px;
         font-size: 14px;
         opacity: 0;
         transition: .4s;
-        &.empty{
-            cursor: default;
-            color: rgb(139, 5, 5);
-            &:hover{
-                color: inherit;
-            }
-        }
-        &:hover{
-            color: #249cd7;
-        }
     }
     .basketIcon{
         position: relative;
         z-index: 2;
-        width: 45px;
-        height: 45px;
+        width: 40px;
+        height: 40px;
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
+        transform: scale(1.15);
         // cursor: pointer;
     }
+
 
     .basketInfoContainer{
         position: absolute;
         // height: 200px;
-        width: 450px;
+        width: 500px;
         // min-width: 200px;
         // max-width: 400px;
         right: 0;
@@ -168,92 +199,6 @@ body.frozen{
         // transition-delay: 0s, 0s, .4s;
         // transition-property: opacity, transform, box-shadow;
     }
-    .basketInfoItem{
-        padding: 0px 5px;
-        display: flex;
-        align-items: center;
-        flex-wrap: nowrap;
-        gap: 5px;
-        cursor: pointer;
-        background: white;
-        // transition: .4s;
-        &:hover{
-            // background: rgb(245, 245, 245);
-        }
-        &:not(:last-of-type){
-            border-bottom: 1px solid #aaaaaa;
-        }
-        .basketInfoItem__remove{
-            margin-left: 5px;
-            flex: 0 0 20px;
-            width: 20px;
-            height: 20px;
-            background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/OOjs_UI_icon_clear-destructive.svg/1200px-OOjs_UI_icon_clear-destructive.svg.png) no-repeat center / cover;
-            border-radius: 50%;
-            transition: .4s;
-            &:hover{
-                box-shadow: 0px 0px 10px red;
-            }
-        }
-        .basketInfoItem__imageBlock{
-            margin: 5px;
-            flex-shrink: 0;
-            position: relative;
-            width: 50px;
-            height: 50px;
-            & img{
-                object-fit: contain;
-            }
-        }
-        .basketInfoItem__name{
-            flex-grow: 1;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            text-wrap: nowrap;
-            font-size: 15px;
-        }
-        .shopChangeBasketCount{
-            flex: 0 0 35px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 3px;
-            .shopChangeBasketCount__decr,.shopChangeBasketCount__add{
-                width: 22px;
-                height: 22px;
-                font-size: 26px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                line-height: 0;
-                cursor: pointer;
-                // border: 1px solid #878787;
-                // border-radius: 5px;
-                
-            }
-            .shopChangeBasketCount__number{
-                max-width: 30px;
-                text-align: center;
-                padding: 0;
-                margin: 0;
-                outline: none;
-                border: none;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                background: transparent;
-                // border-bottom: 1px solid rgb(130, 130, 130); 
-                &::placeholder{
-                    color: black;
-                }
-                &::-webkit-outer-spin-button,
-                &::-webkit-inner-spin-button {
-                    /* display: none; <- Crashes Chrome on hover */
-                    -webkit-appearance: none;
-                    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-                }
-            }
-        }
-    }
 
 
     &.basket_visible{
@@ -269,12 +214,118 @@ body.frozen{
         }
     }
 }
-
-.page{
-    padding-top: 35px;
-    .pageTitle{
-        font-size: 28px;
-        margin: 0;
+.basketList{
+    .basketListWrap{
+        .basketListItem{
+            height: 60px;
+            padding: 0px 8px;
+            display: grid;
+            grid-template-columns: 20px 55px 1fr auto;
+            align-items: center;
+            gap: 5px;
+            background: white;
+            &:not(:last-of-type){
+                border-bottom: 1px solid #aaaaaa;
+            }
+    
+            // & > *{
+            //     height: 100%;
+            //     display: flex;
+            //     align-items: center;
+            // }
+    
+            .basketListItem__remove{
+                align-self: center;
+                width: 20px;
+                height: 20px;
+                background: url(https://cdn.icon-icons.com/icons2/789/PNG/512/delete_icon-icons.com_65184.png) no-repeat center / contain;
+                // border-radius: 50%;
+                opacity: .6;
+                transition: .4s;
+                cursor: pointer;
+                &:hover{
+                    opacity: 1;
+                    box-shadow: 0px 0px 10px grey;
+                    border-radius: 3px;
+                }
+            }
+            .basketListItem__imageBlock{
+                // margin: 5px;
+                margin-left: 5px;
+                max-height: 100%;
+                flex-shrink: 0;
+                position: relative;
+                aspect-ratio: 1/1;
+                cursor: pointer;
+                & img{
+                    display: block;
+                    object-fit: contain;
+                }
+            }
+            .basketListItem__name{
+                padding-left: 5px;
+                align-self: center;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                text-wrap: nowrap;
+                font-size: 15px;
+                cursor: pointer;
+            }
+            .basketListItem__price{
+                display: none;
+            }
+            .shopChangeBasketCount{
+                display: flex;
+                height: 26px;
+                align-items: stretch;
+                justify-content: space-between;
+                // gap: 3px;
+                .shopChangeBasketCount__decr,.shopChangeBasketCount__add{
+                    width: 24px;
+                    font-size: 26px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    line-height: 0;
+                    cursor: pointer;
+                    border: 2px solid #DEDEDE;
+                    transition: .4s;
+                    &:hover{
+                        border-color: rgb(152, 152, 152);
+                    }
+                }
+                .shopChangeBasketCount__number{
+                    max-width: 70px;
+                    height: 100%;
+                    text-align: center;
+                    padding: 0;
+                    margin: 0;
+                    outline: none;
+                    border: none;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    background: transparent;
+                    border-top: 2px solid #DEDEDE;
+                    border-bottom: 2px solid #DEDEDE;
+                    transition: .4s;
+                    &::placeholder{
+                        color: black;
+                    }
+                    &:focus{
+                        background-color: #DEDEDE;
+                    }
+                    &::-webkit-outer-spin-button,
+                    &::-webkit-inner-spin-button {
+                        /* display: none; <- Crashes Chrome on hover */
+                        -webkit-appearance: none;
+                        margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+                    }
+                }
+            }
+        }
+    }
+    .basketList__total{
+        display: none;
     }
 }
 
