--- a/src/assets/styles/shop.scss
+++ b/src/assets/styles/shop.scss
@@ -1,5 +1,5 @@
 .shop{
-    margin-bottom: 40px;
+
 }
 
 .shopFilters{
@@ -107,10 +107,13 @@
     text-decoration: none;
     cursor: pointer;
     transition: .4s;
-    &:hover{
-        box-shadow: 0px 0px 5px 1px #6d6d6d;
-        .shopItem__image{
-            transform: scale(1);
+
+    @media (min-width: 650px) {
+        &:hover{
+            box-shadow: 0px 0px 5px 1px #6d6d6d;
+            .shopItem__image{
+                transform: scale(1);
+            }
         }
     }
     .shopItem__image-block{
@@ -181,9 +184,22 @@
 
 .shopAddToBasket{
     position: relative;
-    &:hover{
-        .shopAddToBasket__counter{
-            transform: translateY(calc(-100% + 1px));   
+    &.notInStock{
+        cursor: default;
+        background: #ff7474;
+        color: white;
+        padding: 8px 0;
+        font-weight: 500;
+        text-align: center;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
+    @media (min-width: 650px) {
+        &:hover{
+            .shopAddToBasket__counter{
+                transform: translateY(calc(-100% + 1px));   
+            }
         }
     }
     .shopAddToBasket__counter{
@@ -198,6 +214,7 @@
         display: flex;
         transition: .4s;
         .shopAddToBasket__input{
+            width: 100%;
             background: transparent;
             border: none;
             outline: none;
@@ -222,8 +239,11 @@
             align-items: center;
             font-size: 25px;
             transition: .4s;
-            &:hover{
-                background: #1893d1;
+            cursor: pointer;
+            @media (min-width: 650px) {
+                &:hover{
+                    background: #1893d1;
+                }
             }
         }
         .shopAddToBasket__countAdd{
@@ -307,109 +327,6 @@
         }
     }
 }
-
-.popup{
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.431);
-    backdrop-filter: blur(4px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 1;
-    pointer-events: all;
-    transition: .4s;
-    &.popup_hidden{
-        opacity: 0;
-        pointer-events: none;
-    }
-}
-.shopProductPopup{
-    padding: 40px 30px;
-    display: inline-block;
-    width: 100%;
-    // height: 85vh;
-    max-width: 900px;
-    background: white;
-    opacity: 1;
-    border-radius: 10px;
-    pointer-events: all;
-    filter: blur(0px);
-    // transform: scale(1);
-    transition: .4s;
-    &.shopProductPopup_hidden{
-        // transform: scale(0);
-        filter: blur(4px);
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    .shopProductPopup__wrap{
-        display: flex;
-    }
-    .shopProductPopup__image-block{
-        flex-shrink: 0;
-        position: relative;
-        width: 300px;
-        margin-right: 30px;
-        border: 1px solid #DEDEDE;
-        border-radius: 10px;
-        padding: 15px;
-        & img{
-            position: static !important;
-            height: auto !important;
-            object-fit: contain;
-        }
-    }
-    .shopProductPopup__info{
-        display: flex;
-        flex-direction: column;
-    }
-    .shopProductPopup__name{
-        font-weight: 500;
-        font-size: 24px;
-    }
-    .shopProductPopup__cat{
-        margin-top: 5px;
-    }
-    .shopProductPopup__descr{
-        margin-top: 15px;
-    }
-    .shopProductPopup__bottom{
-        flex: 1 1 auto;
-        display: flex;
-        align-items: flex-end;
-
-        .shopProductPopup__addToBasket{
-            padding: 10px 30px;
-            background: #1893d1;
-            color: white;
-            cursor: pointer;
-        }
-        .shopProductPopup__changeCount{
-            display: flex;
-            align-items: center;
-            font-size: 14px;
-            
-            .shopProductPopup__countInputWrap{
-                margin-left: 5px;
-                flex: 1 1 auto;
-            }
-            .shopProductPopup__countInput{
-                width: 100%;
-                border: 1px solid #DEDEDE;
-                padding-left: 5px;
-                outline: 0;
-                cursor: initial;
-            }
-        }
-    }
-}
-
 
 .confirm{
     // min-height: 80vh;
@@ -508,7 +425,8 @@
             border: 1px solid #DEDEDE;
             padding: 15px 10px;
             border-radius: 5px;
-            & input{
+            & input, & select{
+                height: 40px;
                 padding: 10px 15px;
                 border: 1px solid #DEDEDE;
                 outline: none;
@@ -531,3 +449,205 @@
         // #24abef
     }
 }
+
+.product{
+    .product__wrap{
+        display: grid;
+        grid-template-columns: 300px 1fr;
+        gap: 35px;
+    }
+    .product__block{
+        width: 100%;
+        &:first-of-type{
+
+        }
+    }
+    .product__imageBlock{
+        position: relative;
+        height: 300px;
+        border: 1px solid #DEDEDE;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            position: static !important;
+            min-width: 95%;
+            max-height: 95%;
+            object-fit: contain;
+        }
+    }
+    .product__title{
+        font-size: 28px;
+        margin: 0;
+        margin-bottom: 10px;
+        font-weight: 700;
+    }
+
+
+    .product__infoPanel{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 25px;
+        padding: 10px 0;
+        border-bottom: 1px solid #c3c3c3;
+        border-top: 1px solid #c3c3c3;
+        font-size: 15px;
+    }
+    .product__cat{
+        // margin-bottom: 3px;
+        align-self: flex-start;
+        padding: 3px 10px;
+        // font-size: 15px;
+        background: #2f4f61;
+        color: white;
+        border-radius: 6px;
+    }
+    .productStock{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        // font-size: 16px;
+        &::before{
+            content: '';
+            width: 8px;
+            height: 8px;
+            flex-shrink: 0;
+            border-radius: 50%;
+        }
+        &.productStock_false{
+            &::before{
+                background: red;
+            }
+        }
+        &.productStock_true{
+            &::before{
+                background: green;
+            }
+        }
+    }
+
+
+    .product__descr{
+        margin-top: 15px;
+        & h2{
+            margin-top: 15px;
+            margin-bottom: 5px;
+            font-size: 19px;
+        }
+        p{
+            margin-bottom: 5px;
+            font-size: 15px;
+        }
+    }
+}
+
+
+@media (max-width: 1000px) {
+    .shopList{
+        // display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        // grid-auto-flow: row;
+        // grid-auto-rows: auto;
+        // grid-gap: 20px;
+        gap: 20px;
+    }
+
+    .confirm{
+        .confirmWrap{
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+        }
+    }
+}
+
+@media (max-width: 750px) {
+    .product{
+        .product__wrap{
+            gap: 25px;
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+        }
+    }
+}
+
+@media (max-width: 650px) {
+    .shopList{
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+    .shopItem{
+        border: 1px solid #DEDEDE;
+        .shopItem__image-block{
+            flex: 0 0 150px;
+        }
+    }
+    
+
+    .shopAddToBasket{
+        .shopAddToBasket__counter{
+            position: static;
+            height: 28px;
+            & .shopAddToBasket__countAdd, & .shopAddToBasket__countIncr{
+                background: #3c4043;
+            }
+        }
+    }
+
+    .product{
+        .product__title{
+            font-size: 24px;
+        }
+        .product__block{
+            .shopAddToBasket__counter{
+                border-top: none;
+            }
+        }
+        .product__infoPanel{
+            gap: 15px;
+        }
+    }
+
+    .confirm{
+        .confirmTitle{
+            margin-bottom: 15px;
+            // text-align: center;
+        }
+        .basketOrder{
+            .basketOrder__title{
+                margin-bottom: 15px;
+                // text-align: center;
+            }
+        }
+        .confirmList .basketList .basketListWrap .basketListItem{
+            padding: 8px 10px;
+            height: auto;
+            grid-template-columns: 20px 90px 1fr;
+            gap: 5px;
+            .basketListItem__remove{
+                grid-row: 1/3;
+            }
+            .basketListItem__imageBlock{
+                margin-right: 5px;
+                grid-row: 1/3;
+                img{
+                    object-position: center;
+                }
+            }
+            .basketListItem__name{
+                padding-left: 0;
+                text-wrap: wrap;
+            }
+            .shopChangeBasketCount{
+                grid-column: 3/4;
+                .shopChangeBasketCount__number{
+                    flex: 1 1 auto;
+                    max-width: initial;
+                }
+            }
+        }
+    }
+}
+   
